tests/baselines/reference/arrayAssignmentTest5.errors.txt
==== tests/cases/compiler/arrayAssignmentTest5.ts (8 errors) ====
    module Test {
        interface IState {
        }
        interface IToken {
            startIndex: number;
        }
        interface IStateToken extends IToken {
            state: IState;
        }
        interface ILineTokens {
            tokens: IToken[];
            endState: IState;
        }
        interface IAction {
        }
        interface IMode {
            onEnter(line:string, state:IState, offset:number):IAction;
            tokenize(line:string, state:IState, includeStates:boolean):ILineTokens;
        }
        export class Bug implements IMode {
                                    ~~~~~
!!! error TS2019: Exported class 'Bug' implements private interface 'IMode'.
            public onEnter(line:string, state:IState, offset:number):IAction {
                                        ~~~~~~~~~~~~
!!! error TS2038: Parameter 'state' of public method from exported class has or is using private type 'IState'.
                                                                     ~~~~~~~
!!! error TS2056: Return type of public method from exported class has or is using private type 'IAction'.
                var lineTokens:ILineTokens= this.tokenize(line, state, true);
                var tokens:IStateToken[]= lineTokens.tokens;
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2012: Cannot convert 'IToken[]' to 'IStateToken[]':
!!! 	Types of property 'pop' of types 'IToken[]' and 'IStateToken[]' are incompatible:
!!! 		Call signatures of types '() => IToken' and '() => IStateToken' are incompatible:
!!! 			Type 'IToken' is missing property 'state' from type 'IStateToken'.
                if (tokens.length === 0) {
                    return this.onEnter(line, tokens, offset);        // <== this should produce an error since onEnter can not be called with (string, IStateToken[], offset)
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2056: Return type of public method from exported class has or is using private type 'IAction'.
                }
            }
            public tokenize(line:string, state:IState, includeStates:boolean):ILineTokens {
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                         ~~~~~~~~~~~~
!!! error TS2038: Parameter 'state' of public method from exported class has or is using private type 'IState'.
                                                                              ~~~~~~~~~~~
!!! error TS2056: Return type of public method from exported class has or is using private type 'ILineTokens'.
                return null;
    ~~~~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
!!! error TS2056: Return type of public method from exported class has or is using private type 'ILineTokens'.
        }
    }
    